SFDC/lotr/force-app/main/default/objects/Account/fields/Birth__c.field-meta.xml
<CustomField>
    <fullName>Birth__c</fullName>
    <description>LOTR character birth date/era (e.g., YT, TA 2968)</description>
    <label>Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>