SFDC/lotr/force-app/main/default/objects/Account/fields/characterId__c.field-meta.xml
<CustomField>
    <fullName>characterId__c</fullName>
    <externalId>true</externalId>
    <label>characterId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>