SFDC/lotr/force-app/main/default/objects/Account/fields/Death__c.field-meta.xml
<CustomField>
    <fullName>Death__c</fullName>
    <description>LOTR character death date/era</description>
    <label>Death</label>
    <length>255</length>
    <type>Text</type>
</CustomField>