SFDC/lotr/force-app/main/default/objects/Account/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>LOTR character gender</description>
    <label>Gender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>