SFDC/lotr/force-app/main/default/objects/Account/fields/Hair__c.field-meta.xml
<CustomField>
    <fullName>Hair__c</fullName>
    <description>LOTR character hair description</description>
    <label>Hair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>