SFDC/lotr/force-app/main/default/objects/Account/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>LOTR character height</description>
    <label>Height</label>
    <length>50</length>
    <type>Text</type>
</CustomField>