SFDC/lotr/force-app/main/default/objects/Account/fields/PreferredName__c.field-meta.xml
<CustomField>
    <fullName>PreferredName__c</fullName>
    <label>PreferredName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>