SFDC/lotr/force-app/main/default/objects/Account/fields/QuoteCount__c.field-meta.xml
<CustomField>
    <fullName>QuoteCount__c</fullName>
    <description>Number of quotes associated with this LOTR character</description>
    <label>Quotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>