SFDC/lotr/force-app/main/default/objects/Account/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <description>LOTR character race (e.g., Ent, Hobbit, Elf, Human)</description>
    <label>Race</label>
    <length>255</length>
    <type>Text</type>
</CustomField>