SFDC/lotr/force-app/main/default/objects/Account/fields/Realm__c.field-meta.xml
<CustomField>
    <fullName>Realm__c</fullName>
    <description>LOTR character realm or homeland</description>
    <label>Realm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>