SFDC/lotr/force-app/main/default/objects/Account/fields/Spouse__c.field-meta.xml
<CustomField>
    <fullName>Spouse__c</fullName>
    <description>LOTR character spouse name</description>
    <label>Spouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>