SFDC/lotr/force-app/main/default/objects/Account/fields/WikiUrl__c.field-meta.xml
<CustomField>
    <fullName>WikiUrl__c</fullName>
    <description>Link to LOTR wiki page for this character</description>
    <label>Wiki URL</label>
    <type>Url</type>
</CustomField>