SFDC/lotr/force-app/main/default/objects/Account/listViews/Copy_of_All_Insurance_Clients.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Insurance_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT_SOURCE</field>
        <operation>equals</operation>
        <value>StateFarm</value>
    </filters>
    <label>All Insurance Clients - AI Analysis</label>
</ListView>