SFDC/lotr/force-app/main/default/objects/Account/listViews/LOTR_Characters.listView-meta.xml
<ListView>
    <fullName>LOTR_Characters</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>characterId__c</columns>
    <columns>Death__c</columns>
    <columns>Gender__c</columns>
    <columns>Race__c</columns>
    <columns>Realm__c</columns>
    <columns>Hair__c</columns>
    <columns>Height__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>characterId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>LOTR Characters</label>
</ListView>